--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,10 @@
   .input {
     @apply border-b-2 valid:border-green-500 invalid:border-red-500 focus:outline-none border-black w-full py-1;
   }
+
+  .btn-back {
+    @apply text-blue-500 border-b border-blue-500 text-xl hover:bg-blue-500 hover:text-white px-2 py-1 rounded-t-lg mb-5 block w-fit;
+  }
 }
 
 .disable-menu .ql-toolbar {
